--- a/api_gateway/src/main/resources/webroot/index.html
+++ b/api_gateway/src/main/resources/webroot/index.html
@@ -11,37 +11,21 @@
         <script src="assets/lib/angular/angular.js"></script>
         <script src="assets/lib/angular-route/angular-route.js"></script>
         <script type="text/javascript" src="/js/app.js"></script>
-        <link href="/assets/css/style.css" rel="stylesheet">
     </head>
     <body ng-app="CrudApp">
         <!-- navbar on the top -->
         <nav class="navbar navbar-default navbar-inverse navbar-static-top" role="navigation" ng-controller="HeaderCtrl">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-				</div>
-                <div class="navbar-collapse collapse">
-                    <div >
-                        <ul class="nav navbar-nav navbar-right">
-                            
+           <ul class="nav navbar-nav navbar-right">        
                             <li ng-if="user.username != undefined">
-                                <span class="welcome-tag" style="margin-right: 30%;">
-                                    <span style="color: white;" >Welcome, </span>
-                                    <span><a style="color: white;" href="#/account/{{user.id}}">{{ user.username}}</a></span>
+                                <span >
+                                    <span align="right" style="color: white;" >Welcome, </span><br>
+                                    <span align="right" style="color: white;">{{ user.username}}</span>
                                 </span>
                             </li>
                             <li ng-if="user.username == undefined"><a style="color: white;" href="#/registo">Register</a></li>
                             <li ng-if="user.username == undefined"><a style="color: white;" href="#/login">Login</a></li>
                             <li ng-if="user.username != undefined"><a style="color: white;" ng-click="logout()" href="#/login">Logout</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+            </ul>
         </nav>
         <div id="error_msm" class="alert" style="display: none;z-index: 100;">
             <strong>Error!</strong>
