--- a/api_gateway/src/main/resources/webroot/index.html
+++ b/api_gateway/src/main/resources/webroot/index.html
@@ -18,8 +18,8 @@
            <ul class="nav navbar-nav navbar-right">        
                             <li ng-if="user.username != undefined">
                                 <span >
-                                    <span align="right" style="color: white;" >Welcome, </span><br>
-                                    <span align="right" style="color: white;">{{ user.username}}</span>
+                                    <span align="right" style="color: white;" ><b>Welcome, </b></span><br>
+                                    <span align="right" style="color: white;"><b>{{ user.username}}</b></span>
                                 </span>
                             </li>
                             <li ng-if="user.username == undefined"><a style="color: white;" href="#/registo">Register</a></li>
